smaller frequency bin

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-	<script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
+	<script src="d3.js" charset="utf-8"></script>
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
@@ -11,5 +11,5 @@
 
 <div id = 'test'></div>
 </body>
-<script type="text/javascript" src = 'playliveaudioback.js'></script>
+<script type="text/javascript" src = 'liveAudioImproved.js'></script>
 </html>
