added canvas based iz

--- a/start/index.html
+++ b/start/index.html
@@ -81,5 +81,5 @@
     </core-drawer-panel>
     
   </body>
-  <script type="text/javascript" src = 'audio.js'></script>
+  <script type="text/javascript" src = 'AusioInductived3CanvasMod.js'></script>
 </html>
